# succinct-serde

./: .gitignore  CMakeLists.txt  README.md
table/: CMakeLists.txt
table/src/: serialize_queries.cc  serialize_table.cc
